# mini_whisper_mcp

./: Dockerfile  README.md  pyproject.toml  server.py
basic_whisper_mcp_server/: __main__.py  models.py  server.py
mini_whisper_mcp/: __main__.py  models.py  server.py
