[project]
name = "mini-whisper-mcp"
version = "0.1.0"
description = "MCP server for audio transcription using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "openai-whisper",
]

[project.scripts]
mini-whisper-mcp = "mini_whisper_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
